docs: update README (palette source, packaging, release)